# starwell

./: CMakeLists.txt  main.cpp
include/: bhtree.h  body.h  camera.h  config.h.in  draw.h  math.h  rwindow.h  scene.h
include/windows/: settings.h  window.h
scenes/: galaxies.py
src/: bhtree.cpp  body.cpp  camera.cpp  draw.cpp  main.cpp  math.cpp  rwindow.cpp  scene.cpp  shaders.glsl
src/windows/: settings.cpp  window.cpp
